[HONEY-BLOG-1] application 모듈 추가. 로그인 구현

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -12,6 +12,7 @@ bootJar {
 
 dependencies {
     implementation project(":domain")
+    implementation project(":application")
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
