--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -11,9 +11,11 @@ bootJar {
 }
 
 dependencies {
-    implementation project(":cache")
-    implementation project(":persistence")
+    implementation 'org.apache.commons:commons-lang3'
+    implementation 'org.apache.commons:commons-collections4:4.4'
 
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+    implementation 'ch.qos.logback:logback-classic'
 }
