--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -11,6 +11,8 @@ bootJar {
 }
 
 dependencies {
+    implementation project(":domain")
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
 }
