--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'honey-blog'
-include 'api', 'persistence', 'domain', 'cache'
+include 'api', 'application', 'persistence', 'cache', 'domain'
 
