--- a/application/build.gradle
+++ b/application/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework:spring-tx'
 }
